# recipe-server

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  diff.rs  lib.rs  main.rs
src/commands/: list.rs  mod.rs  serve.rs  shopping.rs  validate.rs  versions.rs
src/index/: mod.rs  scan.rs  slug.rs  watch.rs
src/recipe/: mod.rs  parse.rs  units.rs
src/server/: assets.rs  mod.rs  render.rs  routes.rs  store.rs
src/shopping/: mod.rs  render.rs
static/: app.js  style.css
tests/: diff.rs  http.rs  http_shopping.rs  index_build.rs  index_errors.rs  shopping.rs  validate_cli.rs  watcher.rs
tests/fixtures/mains/pasta/: carbonara-v1-1.cook  carbonara-v1.cook  carbonara-v2.cook
tests/fixtures/sides/: garlic-bread.cook
